--- a/src/App.css
+++ b/src/App.css
@@ -6,31 +6,11 @@
   background-color: #282c34;
 }
 
-.nav-link {
-  color: var(--secondary-color);
-  font-family: "Patrick Hand";
-  font-size: 18px;
-  line-height: 1.33;
-  text-transform: uppercase;
-}
-
-.active {
-  color: var(--primary-color);
-}
-
 .container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
-
-  @media screen and (min-width: 480px) {
-    width: 480px;
-  }
-
-  @media screen and (min-width: 768px) {
-    width: 768px;
-  }
 }
 
 .section {
@@ -42,6 +22,7 @@
   padding: 6px 12px;
   font: inherit;
   font-size: 24px;
+  text-transform: uppercase;
   color: #61dafb;
   background-color: transparent;
   /* border: 4px solid transparent; */
@@ -56,19 +37,20 @@
   background-color: #7d7d7d;
 }
 
-.active {
+/* .active {
   color: #61dafb;
   text-decoration: none;
-}
+} */
 
 .title {
   text-align: center;
+  padding-bottom: 24px;
 }
 
 /* section users */
 .user-list {
   display: grid;
-  max-width: calc(100vw - 48px);
+  /* max-width: calc(100vw - 48px); */
   grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
   grid-gap: 16px;
   margin-top: 0;
@@ -81,21 +63,21 @@
 
 .user-item,
 .events-item {
-  border-radius: 2px;
+  padding: 4px;
+  border-radius: 4px;
+  background-color: #eaeaea;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .user-item:hover {
-  background-color: #eaeaea;
+  background-color: #b1b0b0;
   cursor: pointer;
 }
 
-/* section events */
-
 /* modal styles */
-.Overlay {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -108,13 +90,13 @@
   z-index: 1500;
 }
 
-.Modal {
-  background-color: rgb(77, 74, 71);
+.modal {
+  background-color: rgb(255, 255, 255);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  min-width: 70%;
+  /* min-width: 70%; */
 }
 
 /* Buton Load more */
@@ -124,28 +106,61 @@
   padding: 16px 0;
 }
 
-.Button {
-  padding: 8px 16px;
-  border-radius: 2px;
-  background-color: #2196f3;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  display: inline-block;
-  color: #fff;
-  border: 0;
-  text-decoration: none;
+.button {
+  padding: 6px 12px;
+  font: inherit;
+  font-size: 24px;
+  color: #61dafb;
+  background-color: #7d7d7d;
+  border: 4px solid transparent;
+  border-radius: 4px;
   cursor: pointer;
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 24px;
-  font-style: normal;
-  font-weight: 500;
-  min-width: 180px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.Button:hover,
-.Button:focus {
-  background-color: #4ea1e5;
+.button:hover,
+.button:focus {
+  color: #0098c2;
+  background-color: #adadad;
+}
+
+/* forms stiles */
+.form-wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+  padding: 24px;
+  min-width: 380px;
+
+  background-color: var(--white);
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.form-title {
+  font-size: 24px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 335px;
+  padding: 16px;
+}
+
+.form-input {
+  display: inline-flex;
+  font-family: "Patrick Hand";
+  font-size: 18px;
+  line-height: 1.33;
+}
+
+.form-label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-size: 18px;
+  line-height: 1.27;
+  padding-bottom: 24px;
 }
